[package]
name = "audio-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Audio processing
cpal = "0.15"
rustfft = "6.0"
# GUI
eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
egui-notify = "0.10"
# System tray
tray-icon = "0.5"
image = "0.24"
# Networking
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Configuration storage
dirs = "5.0"
toml = "0.8"
# Async runtime
futures = "0.3"
# Error handling
anyhow = "1.0"
